# saver

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: sp500_historical.csv
lib/rollingwins/: Cargo.toml  rollingwins.pyi
lib/rollingwins/src/: lib.rs
saver/: returns.py
scripts/: download_sp500.py
